package com.musiccl1v2.core;

// TODO: Implement video playback functionality
public class Video extends Multimedia{
    public Video() {
        super();
    }
}
