@startuml

skinparam class {
    BackgroundColor White
    ArrowColor #2C3E50
    BorderColor #2C3E50
}

skinparam packageStyle rectangle

package "com.musiccl1v2.core" {
    abstract class Multimedia {
        - idCounter : int
        - path : String
        - title : String
        - artist : String
        - album : String
        - genre : String
        - durationSeconds : int
        - position : int
        + getPath()
        + getTitle()
        + getDurationSeconds()
    }

    class Song {
        + Song(File file)
        - extractMetadata(File file)
    }

    Multimedia <|-- Song

    ' --- FUTURE IMPLEMENTATION ---
    class Video << (F, #FFAAAA) Future >> {
        - resolution : String
        - codec : String
        + playVideo()
    }
    Multimedia <|-- Video #red;line.dotted
}

package "com.musiccl1v2.service" {
    class MusicLibrary {
        - songs : List<Song>
        - songIndexByPosition : Map<Integer, Song>
        + loadSongs()
        + findByPosition(int)
        + playSong(String)
    }

    class MusicPlayer {
        - player : AdvancedPlayer
        + playSong(String)
        + stopSong()
    }

    ' --- FUTURE IMPLEMENTATION ---
    class YoutubeDownloader << (F, #FFAAAA) Future >> {
        - YTDLP_PATH : String
        + downloadAudio(String url)
        + downloadVideo(String url)
    }

    MusicLibrary *-- MusicPlayer
    MusicLibrary ..> YoutubeDownloader #red;line.dotted : "uses yt-dlp"
}

package "com.musiccl1v2.data" {
    class History {
        - connection : Connection
        + record(String)
        + read()
    }

    ' --- FUTURE IMPLEMENTATION ---
    class PlaylistRepository << (F, #FFAAAA) Future >> {
        - connection : Connection
        + savePlaylist(Playlist)
        + loadPlaylist(String name)
    }
}

package "com.musiccl1v2.ui" {
    class CLIcontroller {
        - library : MusicLibrary
        - history : History
        + executeCommand()
    }

    class ConsoleRenderer <<Utility>> {
        + printBanner()
        + printSongList()
        + displaySongInfo()
    }
}

CLIcontroller --> MusicLibrary
CLIcontroller --> History
CLIcontroller ..> ConsoleRenderer

legend right
  <font color=red>Dotted lines/Red items</font> = Future Implementations
  (F) = Planned Feature
endlegend

@enduml